Inserimento di un Activity dedicata al Log in su Client Android

--- a/ClientGeoUser/app/src/main/res/layout/activity_initial_page.xml
+++ b/ClientGeoUser/app/src/main/res/layout/activity_initial_page.xml
@@ -88,6 +88,14 @@
         android:layout_below="@+id/surname"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="12dp" />
+
+    <Button
+        android:id="@+id/login"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/button"
+        android:layout_toStartOf="@+id/toggleButton"
+        android:text="@string/action_log_in" />
 </RelativeLayout>
 
 
