--- a/ClientGeoUser/app/src/main/res/layout/activity_initial_page.xml
+++ b/ClientGeoUser/app/src/main/res/layout/activity_initial_page.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_initial_page"
     android:layout_width="match_parent"
@@ -10,92 +10,52 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.vfggmail.progettoswe17.clientgeouser.application.initialPage">
 
-    <ToggleButton
-        android:textOff="@string/registrati"
-        android:textOn="@string/accedi"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="23dp"
-        android:id="@+id/toggleButton"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:text="@string/username"
-        android:ems="10"
-        android:layout_marginStart="23dp"
-        android:layout_marginTop="25dp"
-        android:id="@+id/username"
-        android:layout_below="@+id/toggleButton"
-        android:layout_alignParentStart="true" />
+    <ScrollView
+        android:id="@+id/login_form"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <EditText
-        android:id="@+id/password1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/username"
-        android:layout_below="@+id/username"
-        android:ems="10"
-        android:text="@string/password" />
+        <LinearLayout
+            android:id="@+id/initial_page_form"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/email"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/password2"
-        android:layout_below="@+id/password2"
-        android:ems="10"
-        android:inputType="textEmailAddress"
-        android:text="@string/email" />
 
-    <EditText
-        android:id="@+id/name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/email"
-        android:layout_below="@+id/email"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="@string/nome" />
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/logo"
+                />
 
-    <EditText
-        android:id="@+id/password2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/password1"
-        android:layout_below="@+id/password1"
-        android:ems="10"
-        android:text="@string/RePassword" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="16dp"
+                android:textSize="@dimen/fab_margin"
+                android:text="@string/init_message"/>
 
-    <EditText
-        android:id="@+id/surname"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/name"
-        android:layout_below="@+id/name"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="@string/cognome" />
 
-    <Button
-        android:text="@string/buttonTog"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/button"
-        android:layout_below="@+id/surname"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="12dp" />
+            <Button
+                android:id="@+id/initial_page_login"
+                style="?android:textAppearanceSmall"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="@string/action_log_in"
+                android:textStyle="bold" />
 
-    <Button
-        android:id="@+id/login"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/button"
-        android:layout_toStartOf="@+id/toggleButton"
-        android:text="@string/action_log_in" />
-</RelativeLayout>
+            <Button
+                android:id="@+id/initial_page_signin"
+                style="?android:textAppearanceSmall"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="@string/action_sign_in_short"
+                android:textStyle="bold" />
 
+        </LinearLayout>
+    </ScrollView>
+</LinearLayout>
 
