--- a/ClientGeoUser/app/src/main/res/layout/activity_login.xml
+++ b/ClientGeoUser/app/src/main/res/layout/activity_login.xml
@@ -27,6 +27,12 @@
 
 
 
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/logo"
+                />
+
                 <EditText
                     android:id="@+id/username"
                     android:layout_width="match_parent"
@@ -60,6 +66,17 @@
                 android:text="@string/action_log_in"
                 android:textStyle="bold" />
 
+            <Button
+                android:id="@+id/login_signin"
+                style="?android:textAppearanceSmall"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="@string/action_sign_in_short"
+                android:textStyle="bold" />
+
+
         </LinearLayout>
+
     </ScrollView>
 </LinearLayout>
