--- a/ClientGeoUser/app/src/main/res/layout/activity_find_user.xml
+++ b/ClientGeoUser/app/src/main/res/layout/activity_find_user.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_find_user"
     android:layout_width="match_parent"
@@ -10,48 +10,97 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.vfggmail.progettoswe17.clientgeouser.application.findUserActivity">
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:text="@string/utenteC"
-        android:ems="10"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="78dp"
-        android:id="@+id/utenteC" />
+    <ScrollView
+        android:id="@+id/login_form"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:text="@string/data1"
-        android:ems="10"
-        android:layout_below="@+id/utenteC"
-        android:layout_alignEnd="@+id/utenteC"
-        android:layout_marginTop="32dp"
-        android:id="@+id/data1" />
+        <LinearLayout
+            android:id="@+id/find_page_form"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:text="@string/data2"
-        android:ems="10"
-        android:layout_below="@+id/data1"
-        android:layout_alignEnd="@+id/data1"
-        android:layout_marginTop="32dp"
-        android:id="@+id/data2" />
 
-    <Button
-        android:text="@string/find"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/data2"
-        android:layout_marginBottom="75dp"
-        android:id="@+id/cerca" />
-</RelativeLayout>
+            <EditText
+                android:id="@+id/find_username"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/prompt_username"
+                android:inputType="text"
+                android:maxLines="1"
+                android:singleLine="true" />
+
+            <TextView
+                android:id="@+id/find_date1"
+                android:layout_width="match_parent"
+                android:layout_height="56dp"
+                android:textAlignment="center"
+                android:layout_marginTop="20dp"
+                android:textSize="24dp"/>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_gravity="center">
+
+                <Button
+                    android:id="@+id/find_date1_buttonDate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/find_date" />
+
+                <Button
+                    android:id="@+id/find_time1_buttonTime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/find_time" />
+                />
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/find_date2"
+                android:layout_width="match_parent"
+                android:layout_height="59dp"
+                android:textAlignment="center"
+                android:layout_marginTop="20dp"
+                android:textSize="24dp"/>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_gravity="center">
+
+                <Button
+                    android:id="@+id/find_date2_buttonDate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/find_date" />
+
+                <Button
+                    android:id="@+id/find_time2_buttonTime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/find_time" />
+                />
+
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/find_find_button"
+                style="?android:textAppearanceSmall"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="@string/find"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+    </ScrollView>
+
+</LinearLayout>
 
 
 
