--- a/ClientGeoUser/app/src/main/res/layout/activity_main_page.xml
+++ b/ClientGeoUser/app/src/main/res/layout/activity_main_page.xml
@@ -12,24 +12,24 @@
         android:layout_height="wrap_content"
        >
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            />
+
 
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_main" />
+    <include
+        android:id="@+id/include2"
+        layout="@layout/content_main" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
+        android:layout_marginBottom="20dp"
+        android:layout_marginRight="20dp"
         app:backgroundTint="@color/verde2"
+        app:layout_anchor="@+id/include2"
+        app:layout_anchorGravity="right|bottom"
         app:srcCompat="@android:drawable/ic_dialog_email" />
 
 </android.support.design.widget.CoordinatorLayout>
