--- a/ClientGeoUser/app/src/main/res/layout/content_main.xml
+++ b/ClientGeoUser/app/src/main/res/layout/content_main.xml
@@ -14,42 +14,12 @@
     tools:showIn="@layout/activity_main_page">
 
 
-    <TextView
-        android:text=""
+    <fragment
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="100dp"
-        android:id="@+id/mAccuracyView" />
+        android:layout_height="350dp"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:id="@+id/main_map"/>
 
-    <TextView
-        android:text=""
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/mAccuracyView"
-        android:layout_alignStart="@+id/mAccuracyView"
-        android:layout_marginTop="20dp"
-        android:id="@+id/mTimeView" />
-
-    <TextView
-        android:text=""
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/mTimeView"
-        android:layout_alignEnd="@+id/mTimeView"
-        android:layout_marginTop="20dp"
-        android:id="@+id/mLatView" />
-
-    <TextView
-        android:text=""
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/mLatView"
-        android:layout_alignEnd="@+id/mLatView"
-        android:layout_marginTop="20dp"
-        android:id="@+id/mLngView" />
 
     <Button
         android:text="@string/trova_utente"
