--- a/ClientGeoUser/app/src/main/res/menu/menu_login.xml
+++ b/ClientGeoUser/app/src/main/res/menu/menu_login.xml
@@ -1,11 +1,11 @@
+<?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.vfggmail.progettoswe17.application.MainActivity">
-    
+    tools:context="com.vfggmail.progettoswe17.application.loginActivity">
     <item
-        android:id="@+id/action_logout"
+        android:id="@+id/action_settings"
         android:orderInCategory="100"
-        android:title="LogOut"
+        android:title="@string/action_settings"
         app:showAsAction="never" />
 </menu>
