--- a/ClientGeoUser/app/src/main/res/layout/activity_settings.xml
+++ b/ClientGeoUser/app/src/main/res/layout/activity_settings.xml
@@ -14,6 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="number"
+        android:digits="0123456789."
         android:hint="@string/prompt_ip"
         android:ems="10"
         android:layout_alignParentTop="true"
