--- a/ClientGeoUser/app/src/main/res/layout/activity_find_user.xml
+++ b/ClientGeoUser/app/src/main/res/layout/activity_find_user.xml
@@ -22,6 +22,13 @@
             android:orientation="vertical">
 
 
+            <Spinner
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/find_spinner"/>
+
+
+
             <EditText
                 android:id="@+id/find_username"
                 android:layout_width="match_parent"
@@ -30,6 +37,8 @@
                 android:inputType="text"
                 android:maxLines="1"
                 android:singleLine="true" />
+
+
 
             <TextView
                 android:id="@+id/find_date1"
