--- a/ClientGeoUser/app/src/main/res/layout/activity_find_user.xml
+++ b/ClientGeoUser/app/src/main/res/layout/activity_find_user.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.vfggmail.progettoswe17.clientgeouser.application.findUserActivity">
+    tools:context="com.vfggmail.progettoswe17.clientgeouser.application.FindUserActivity">
 
     <ScrollView
         android:id="@+id/login_form"
