--- a/ClientGeoUser/app/src/main/res/layout/activity_login.xml
+++ b/ClientGeoUser/app/src/main/res/layout/activity_login.xml
@@ -10,7 +10,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.vfggmail.progettoswe17.clientgeouser.application.loginActivity">
+    tools:context="com.vfggmail.progettoswe17.clientgeouser.application.LoginActivity">
 
     <!-- Login progress -->
 
