--- a/ClientGeoUser/app/src/main/res/layout/activity_settings.xml
+++ b/ClientGeoUser/app/src/main/res/layout/activity_settings.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.vfggmail.progettoswe17.clientgeouser.application.settingsActivity">
+    tools:context="com.vfggmail.progettoswe17.clientgeouser.application.SettingsActivity">
 
     <EditText
         android:layout_width="wrap_content"
