--- a/ClientGeoUser/app/src/main/res/layout/activity_find_user.xml
+++ b/ClientGeoUser/app/src/main/res/layout/activity_find_user.xml
@@ -36,7 +36,8 @@
                 android:hint="@string/prompt_username"
                 android:inputType="text"
                 android:maxLines="1"
-                android:singleLine="true" />
+                android:singleLine="true"
+                android:maxLength="30"/>
 
 
 
